# vulthor

./: .gitignore  AUDIT-BLOCKING-IO.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  DESIGN-COMPONENTS.md  HANDOFF.md  README.md  TODO.txt  VISION.md  gnrjnr3mtppnmkg6duimjuvgbbnabff2  manifest  release-notes-v1.0.0.md  run-test-maildir.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: body_load.rs  folder_scan.rs  startup.rs
benches/common/: mod.rs
fixture/: README.md
fixture/maildir/Drafts/cur/: 1735930000.M890123P45678.hostname:2,D
notes/observations/: 2026-05-16-vu-8qr-clippy-failures-on-main.md  2026-05-16-vu-8uj-failing-tests-on-main.md  2026-05-16-vu-sd6-backspace-legacy-folder-index.md  2026-05-16-vu-wvd-fmt-drift-and-maildir-clippy.md  2026-05-17-vu-bfb-arrow-keys-bypass-keymap.md  2026-05-17-vu-bfb-dispatch-bounded-shadow.md  2026-05-17-vu-bfb-selection-state-write-only-mirror.md  2026-05-17-vu-bfb-ui-fake-ctx-per-frame.md  2026-05-17-vu-q9b-pane-change-bypasses-on-focus-change.md  README.md
notes/observations/converted/: 2026-05-17-vu-nqj-html-body-rendered-unsanitized.md  2026-05-17-vu-nqj-localhost-pane-has-no-access-control.md  2026-05-17-vu-nqj-no-csp-header-on-web-pane.md  vu-3ko-2026-05-16-vu-sd6-backspace-legacy-folder-index.md  vu-4bg-vu-2y8-l-key-on-accounts-pane-bypasses-select.md  vu-otn-2026-05-16-vu-tpv-keybindings-action-dispatch-gap.md
packaging/: build-deb.sh
packaging/aur/: PKGBUILD
scripts/: run-vulthor-fixture.sh
src/: app.rs  classifier.rs  compose.rs  config.rs  crash.rs  doctor.rs  email.rs  error.rs  input.rs  integration_tests.rs  keymap.rs  layout.rs  lib.rs  link_check.rs  log.rs  maildir.rs  main.rs  phase3_integration_tests.rs  phase4_integration_tests.rs  sanitizer.rs  stats.rs  test_fixtures.rs  theme.rs  ui.rs  undo.rs  web.rs
src/classifier/: embedding.rs  mod.rs
src/components/: accounts.rs  body_loader.rs  content.rs  ctx.rs  draft.rs  folder_picker.rs  folder_scanner.rs  folders.rs  headers_loader.rs  help.rs  html_viewer.rs  maildir_watcher.rs  messages.rs  mod.rs  modal.rs  msg.rs  root.rs  search.rs
static/: app.js  styles.css
tests/: maildir_fixtures.rs  proptest_config.rs  proptest_email.rs  proptest_maildir.rs  snapshot_test.rs  theme_presets.rs
tests/fixtures/maildir/: README.md
tests/snapshots/: snapshot_test__render_content_snapshot.snap  snapshot_test__render_draft_snapshot.snap  snapshot_test__render_folders_snapshot.snap  snapshot_test__render_messages_snapshot.snap  theme_presets__preset_snapshot_default_dark.snap  theme_presets__preset_snapshot_default_light.snap  theme_presets__preset_snapshot_nord.snap  theme_presets__preset_snapshot_solarized_dark.snap
(+24 files in other folders)
