[package]
name = "vulthor"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
mailparse = "0.15"
html2md = "0.2"
walkdir = "2.0"
clap = { version = "4.0", features = ["derive"] }
