[package]
name = "vulthor"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
mail-parser = "0.11"
walkdir = "2.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
chrono = "0.4"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.0"
