[package]
name = "vulthor"
version = "1.0.0"
edition = "2024"
description = "Modern TUI email client with an integrated HTML viewer. MailDir-native; pairs with mbsync, notmuch, and msmtp."
license = "AGPL-3.0-or-later"
repository = "https://github.com/vividn/vulthor"
homepage = "https://github.com/vividn/vulthor"
readme = "README.md"
keywords = ["email", "tui", "maildir", "mail", "terminal"]
categories = ["command-line-utilities", "email"]
authors = ["vividn"]
exclude = [
    "fixture/",
    "notes/",
    "packaging/",
    ".github/",
    "AUDIT-*.md",
    "DESIGN-*.md",
    "CLAUDE.md",
    "VISION.md",
    "TODO.txt",
    "run-test-maildir.sh",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
mail-parser = "0.11"
walkdir = "2.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
chrono = "0.4"
unicode-width = "0.2"
thiserror = "2.0"
tempfile = "3.0"
notify = "8.2"
ammonia = "4"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
criterion = "0.5"

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "folder_scan"
harness = false

[[bench]]
name = "body_load"
harness = false

[package.metadata.deb]
maintainer = "vividn <vividn@users.noreply.github.com>"
copyright = "2026, vividn"
license-file = ["LICENSE", "0"]
extended-description = """\
Vulthor is a modern TUI email client with an integrated HTML viewer.
MailDir-native; pairs with mbsync (sync), notmuch (search), and msmtp (send)."""
depends = "$auto, notmuch, msmtp, isync"
section = "mail"
priority = "optional"
assets = [
    ["target/release/vulthor", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/vulthor/README", "644"],
]
